# discord-bot

./: .env.template  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Procfile  README.md  app.spec  dingomata.cfg  echo.py  pyproject.toml
.github/workflows/: deploy.yml  lint.yml  main.yml
config/: config.toml  cyborgi.toml  dingomata.toml  glexsiba.toml  logging.cfg  server_defaults.yaml  test_bot.toml  test_bot.yml  the_cyborgi.yml  the_dingomata.yml
config/servers/: lycaon.yaml  snazzy_test_server.yaml  the_dingo_den.yaml
dingomata/: __main__.py  _bot.py  bot.py  chat.py  checks.py  cog.py  config.py  decorators.py  exceptions.py  models.py  pool.py  utils.py
dingomata/_config/: __init__.py  bot.py
dingomata/cogs/: __init__.py  admin.py  automod.py  base.py  bedtime.py  collect.py  collection.py  gamba.py  game_code.py  guild_member.py  logging.py  poll.py  profile.py  quote.py  random_response_data.yaml  refsheet.py  reminder.py  role_manage.py  role_picker.py  roles.py  text.py  tuch.py  user.py
dingomata/cogs/bedtime/: __init__.py  bedtime.py  commands.py  config.py  models.py
dingomata/cogs/botadmin/: commands.py  config.py
dingomata/cogs/gamba/: __init__.py  commands.py  config.py  gamba.py  models.py
dingomata/cogs/game_code/: commands.py  config.py  pool.py
dingomata/cogs/gamecode/: __init__.py  commands.py  gamecode.py  models.py  pool.py
dingomata/cogs/moderation/: commands.py  config.py
dingomata/cogs/poll/: commands.py  config.py  models.py
dingomata/cogs/quote/: __init__.py  commands.py  config.py  models.py
dingomata/cogs/roles/: commands.py  config.py
dingomata/cogs/text/: Friends.yaml  __init__.py  commands.py  config.py  models.py  quotes.yaml  random_response_data.yaml  text.py  text_response_data.yaml
dingomata/cogs/twitch/: __init__.py  commands.py  config.py
dingomata/config/: __init__.py  bot.py  cogs.py  config.py  env.py  models.py  provider.py  values.py
dingomata/database/: fields.py  models.py
dingomata/discord_bot/: lifecycle.py  test.py
dingomata/discord_bot/commands/: admin.py  auto_unarchive.py  bedtime.py  chat.py  collection.py  count_votes.py  logging.py  logs.py  modmail.py  profile.py  quote.py  reminder.py  roles.py  text.py  timezone.py  tuch.py  twitch.py
dingomata/integrations/: __init__.py  twitter.py
snoozybot/: __main__.py  chat.py  utils.py
snoozybot/config/: env.py  provider.py  values.py
snoozybot/database/: fields.py  lifecycle.py  models.py
snoozybot/discord_bot/: lifecycle.py
snoozybot/discord_bot/commands/: admin.py  auto_unarchive.py  bedtime.py  bluesky.py  chat.py  collection.py  count_votes.py  logs.py  modmail.py  petpet.py  presence.py  profile.py  quote.py  reminder.py  roles.py  text.py  timezone.py  tuch.py  twitch.py  youtube.py
