[tool.poetry]
name = "snoozybot"
version = "2.0.0"
description = "A discord bot that does a bunch of random things."
authors = ["SnazzyFox <12706268+snazzyfox@users.noreply.github.com>"]
license = "MIT"
packages = [
    {include = "snoozybot"},
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pytz = "^2024.1"
prettytable = "^3.9.0"
parsedatetime = "^2.6"
Unidecode = "^1.3.8"
tortoise-orm = {extras = ["accel", "asyncpg"], version = "^0.20.1"}
openai = "^1.24.1"
pydantic-settings = "^2.4.0"
async-lru = "^2.0.4"
hikari-lightbulb = "^2.3.5"
hikari = { extras = ["speedups"], version = "*" } # This will be constrained by lightbulb
cachetools = "^5.3.2"
# TwitchIO for twitch bot - waiting on twitchio 3.0 which will not be incompatible with hikari
twitchio = "^2.9.1"
atproto = "^0.0.46"
google-generativeai = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
jurigged = "^0.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
plugins = ["pydantic.mypy"]