[tool.poetry]
name = "snoozybot"
version = "2.0.0"
description = "A discord bot that does a bunch of random things."
authors = ["SnazzyFox <12706268+snazzyfox@users.noreply.github.com>"]
license = "MIT"
packages = [
    {include = "snoozybot"},
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pytz = "^2025.1"
prettytable = "^3.14.0"
parsedatetime = "^2.6"
Unidecode = "^1.3.8"
tortoise-orm = {extras = ["accel", "asyncpg"], version = "^0.24.0"}
openai = "^1.65.2"
pydantic-settings = "^2.8.0"
async-lru = "^2.0.4"
hikari-lightbulb = "^2.3.5"
hikari = { extras = ["speedups"], version = "*" } # This will be constrained by lightbulb
cachetools = "^5.5.0"
# TwitchIO for twitch bot - waiting on twitchio 3.0 which will not be incompatible with hikari
twitchio = "^2.10.0"
atproto = "^0.0.59"
google-generativeai = "^0.8.4"
pet-pet-gif = "^1.0.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
jurigged = "^0.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
plugins = ["pydantic.mypy"]